changed to english

--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -48,7 +48,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="244dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="44dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/spinner4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,7 +157,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:onClick="tallennus"
+        android:onClick="saveThis"
         android:text="Tallenna / lisää kortti"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -175,7 +175,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="poista"
+        android:onClick="deleteCard"
         android:text="poistakortti"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -209,7 +209,7 @@
         android:layout_marginTop="132dp"
         android:layout_marginEnd="74dp"
         android:layout_marginBottom="20dp"
-        android:onClick="maksaKortilla"
+        android:onClick="buyWithCard"
         android:text="Maksa tällä kortilla"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView15"
