--- a/app/src/main/res/layout/activity_kirjautuminen.xml
+++ b/app/src/main/res/layout/activity_kirjautuminen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Kirjautuminen">
+    tools:context=".LogInActivity">
 
     <EditText
         android:id="@+id/editText"
@@ -51,7 +51,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:onClick="kirjaudu"
+        android:onClick="goIn"
         android:text="Kirjaudu sisään"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="uusi"
+        android:onClick="newUsers"
         android:text="Luo uusi käyttäjä"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
