--- a/app/src/main/res/layout/activity_kortilla_maksu.xml
+++ b/app/src/main/res/layout/activity_kortilla_maksu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".kortillaMaksu">
+    tools:context=".PayCardActivity">
 
     <Button
         android:id="@+id/button10"
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:onClick="maksu"
+        android:onClick="buy"
         android:text="MAKSA KORTILLA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
