--- a/app/src/main/res/layout/activity_more_money.xml
+++ b/app/src/main/res/layout/activity_more_money.xml
@@ -58,7 +58,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="89dp"
         android:layout_marginEnd="1dp"
-        android:onClick="maksa"
+        android:onClick="takeMoney"
         android:text="Talleta rahat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
