--- a/app/src/main/res/layout/activity_pankki_controller.xml
+++ b/app/src/main/res/layout/activity_pankki_controller.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PankkiController">
+    tools:context=".BankControllerActivity">
 
     <TextView
         android:id="@+id/textView29"
@@ -47,7 +47,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="lisaatili"
+        android:onClick="addAccount"
         android:text="Lisää käyttäjälle tili"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="kortit"
+        android:onClick="cards"
         android:text="Tarkastele kortteja"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="lisaaRahaa"
+        android:onClick="moreMoney"
         android:text="Lisää käyttäjälle rahaa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="kayttajaTiedot"
+        android:onClick="usersInformation"
         android:text="Käyttäjätiedot"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="saldot"
+        android:onClick="saldos"
         android:text="Tilisaldot"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="tilitiedot"
+        android:onClick="accountInfo"
         android:text="Tilitapahtumat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,7 +144,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="@android:color/holo_red_dark"
-        android:onClick="poistaKayttaja"
+        android:onClick="deleteUser"
         android:text="POISTA KÄYTTÄJÄ"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
@@ -164,7 +164,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/ic_menu_revert"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:onClick="ulos"
+        android:onClick="outTo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView29"
         app:layout_constraintHorizontal_bias="0.51"
