--- a/app/src/main/res/layout/activity_uusi.xml
+++ b/app/src/main/res/layout/activity_uusi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Uusi">
+    tools:context=".newUserActivity">
 
     <EditText
         android:id="@+id/editText6"
@@ -71,7 +71,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="lisaa"
+        android:onClick="add"
         android:text="Lisää käyttäjä"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
